--- a/dev/conf.ini
+++ b/dev/conf.ini
@@ -2,17 +2,17 @@ lang = en,ru
 
 password = 6fbde3e2135f10ee603ff6f59bc97d4b0a4d4e9a
 
-session = 
+session = ef9bd934e17557db38cd9f33d0f4d32b896a39c1
 
 pass_complexity = 500000
 
-pass_complexity_js = 14978
+pass_complexity_js = 14977
 
-auth_time = 1709401164
+auth_time = 1709403882
 
-auth_error_time = 
+auth_error_time = 1709403858
 
-auth_error_list = 
+auth_error_list = a%3A0%3A%7B%7D
 
 auth_error_limit = 5
 
